--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "proxy": "http://localhost:5000",
   "dependencies": {
     "axios": "^0.21.1",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "pg": "^8.2.1",
+    "pg": "^8.7.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "^4.0.1"
+    "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.1",
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
     "nodemon": "^1.18.5"
